--- a/requirements_lab1.txt
+++ b/requirements_lab1.txt
@@ -45,7 +45,7 @@ gymnasium[classic-control]~=1.2.1
 imageio~=2.37.0   # required to visualize environments as GIF images within the notebook
 # ipykernel~=6.30.1
 ipywidgets~=8.1.7     # required for tqdm
-# jupyterlab~=4.4.8
+jupyterlab~=4.4.8
 matplotlib~=3.10.6
 # numpy~=2.3.3
 pandas~=2.3.2
