--- a/requirements_lab4_google_colab.txt
+++ b/requirements_lab4_google_colab.txt
@@ -20,7 +20,7 @@ torch~=2.8.0
 # Install Gymnasium with all the environments
 # C.f. https://github.com/Farama-Foundation/Gymnasium/blob/main/pyproject.toml
 
-gymnasium[classic-control,mujoco,other]~=1.2.1
+gymnasium[classic-control,mujoco]~=1.2.1
 
 # Alternatively, you can install Gymnasium with specific environments only
 
@@ -36,8 +36,8 @@ gymnasium[classic-control,mujoco,other]~=1.2.1
 # https://github.com/DLR-RM/stable-baselines3
 
 # opencv-python             # Required by some gymnasium wrappers (for other versions, see https://opencv.org/get-started/)
-# opencv-python-headless      # https://github.com/DLR-RM/stable-baselines3/issues/298
-stable-baselines3[extra]~=2.7.0
+opencv-python-headless      # https://github.com/DLR-RM/stable-baselines3/issues/298
+stable-baselines3~=2.7.0
 
 
 # REQUIRED DEPENDENCIES #######################################################
@@ -45,13 +45,13 @@ stable-baselines3[extra]~=2.7.0
 imageio~=2.37.0   # required to visualize environments as GIF images within the notebook
 # ipykernel~=6.30.1
 ipywidgets~=8.1.7     # required for tqdm
-jupyterlab~=4.4.8
+# jupyterlab~=4.4.8
 matplotlib~=3.10.6
 # numpy~=2.3.3
 pandas~=2.3.2
 # pettingzoo        # For lab3 on MCTS
 # pygame~=2.6.1            # required for the "cartpole" Gym environment but already installed with Gymnasium
-# pyvirtualdisplay~=3.0  # required for rendering in a headless environment
+pyvirtualdisplay~=3.0  # required for rendering in a headless environment
 # scipy~=1.16.2
 seaborn~=0.13.2
 tqdm~=4.67.1
@@ -60,7 +60,7 @@ tqdm~=4.67.1
 # OPTIONAL DEPENDENCIES #######################################################
 
 aim~=3.29.1
-# moviepy      # Required by the "gym.wrappers.RecordVideo" wrapper
+moviepy      # Required by the "gym.wrappers.RecordVideo" wrapper
 optuna~=4.5.0
 # optuna-dashboard
 tensorboard~=2.20.0
